modified product details page and added stuff to accommodate stupid windows

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
         <link href="css/sweetalert.css" rel="stylesheet">
 
-        <link href="css/ripe.css?v=1020" rel="stylesheet">
+        <link href="./assets/css/ripe.css?v=1020" rel="stylesheet">
 
         <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
