--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
 
         <title>RIPe Fruits</title>
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 
-        <link href="css/hover.css" rel="stylesheet">
+        <link href="./assets/css/hover.css" rel="stylesheet">
 
-        <link href="css/sweetalert.css" rel="stylesheet">
+        <link href="./assets/css/sweetalert.css" rel="stylesheet">
 
         <link href="./assets/css/ripe.css?v=1020" rel="stylesheet">
 
-        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="./assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     </head>
 
@@ -27,13 +27,13 @@
 
         <div ui-view=""></div>    
 
-        <script src="js/jquery.js"></script>
+        <script src="./assets/js/jquery.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>    
-        <script src="js/sweetalert.min.js"></script>
-        <script src="js/ngSweetAlert.js"></script>
-        <script src="js/main.js?v=1020"></script>
+        <script src="./assets/js/bootstrap.min.js"></script>    
+        <script src="./assets/js/sweetalert.min.js"></script>
+        <script src="./assets/js/ngSweetAlert.js"></script>
+        <script src="./assets/js/main.js?v=1020"></script>
 
     </body>
 
