--- a/public/index.html
+++ b/public/index.html
@@ -20,18 +20,20 @@
 
         <link href="./assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+
     </head>
 
     <body>
         <div ng-include="'templates/header.html'"></div>
 
-        <div ui-view=""></div>    
+        <div ui-view=""></div>
 
         <script src="./assets/js/jquery.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
-        <script src="./assets/js/bootstrap.min.js"></script>    
+        <script src="./assets/js/bootstrap.min.js"></script>
         <script src="./assets/js/sweetalert.min.js"></script>
         <script src="./assets/js/ngSweetAlert.js"></script>
         <script src="./assets/js/main.js"></script>
